--- a/view/clima.html
+++ b/view/clima.html
@@ -67,6 +67,7 @@
             <div class="collapse" id="collapseTemperatura">
                 <div class="card card-body">
                     <section>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d52436.11513099013!2d-58.835102!3d-34.7743!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1667361113016!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <p>Widget de clima</p>
                         <div>
                             <div id="ww_8f4cc25f54a43" v='1.3' loc='auto' a='{"t":"horizontal","lang":"es","ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://sharpweather.com/es/widgets/" id="ww_8f4cc25f54a43_u" target="_blank">Widget de tiempo para el sitio web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_8f4cc25f54a43"></script><!-- tutiempo.net - Ancho:300px - Alto:411px -->
