--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -39,56 +39,46 @@
       }
       
 /* btn-news */
-/* cambios en el botón */
-/* .btn-news {
-    outline: none;
+
+form.input-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .input-group__email {
+    min-height: 50px;
+    max-width: 250px;
+    padding: 0 1rem;
+    color: #fff;
+    font-size: 15px;
+    border: 2px solid #ffffff;
+    border-radius: 6px 0 0 6px;
+    background-color: transparent;
+  }
+  
+  .button--submit-news {
+    min-height: 50px;
+    padding: .5em 1em;
+    border: none;
+    border-radius: 0 6px 6px 0;
+    background-color: #ffffff;
+    color: rgb(41, 40, 40);
+    font-size: 15px;
     cursor: pointer;
-    border: 1px solid #0075ff;
-    padding: 0.5rem 1.4rem;
-    margin: 10px 0 0 0;
-    font-size: inherit;
-    position: relative;
-    display: inline-block;
-    letter-spacing: 0.05rem;
-    font-weight: 700;
-    font-size: .93rem;
-    border-radius: 500px;
-    overflow: hidden;
-    background:#0075ff ;
-    color: #0075ff;
-   }
-   
-.btn-news span {
-    position: relative;
-    z-index: 10;
-    transition: color 0.4s;
-   }
-   
-.btn-news:hover span {
-    color: rgb(255, 255, 255);
-   }
-   
-.btn-news::before, .btn-news::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-   }
-   
-.btn-news::before {
-    content: "";
-    background:#fff ;
-    width: 120%;
-    left: -10%;
-    transform: skew(30deg);
-    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
-   }
-   
-.btn-news:hover::before {
-    transform: translate3d(100%, 0, 0);
-   }  */
+    transition: background-color .3s ease-in-out;
+  }
+  
+  .button--submit-news:hover {
+    background-color: #1d1d80;
+  }
+  
+  .input-group__email:focus, .input-group__email:focus-visible {
+    border-color: #ffffff;
+    outline: none;
+  }
+  
 
 /*SECCION E-SHOP*/
 .e-shop {
